<resources>
    <string name="app_name">BiblioHub</string>
    <string name="login_title">Welcome to BiblioHub!</string>
    <string name="register_title">Join Us!</string>
    <string name="login_desc">Enter your username and password to proceed. Happy Reading!</string>
    <string name="register_desc">Fill in the required details below, to proceed. Happy Reading!</string>
    <string name="checkout_desc">Please enter your delivery and payment details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login"><u>Login</u></string>
    <string name="new_user_message">New to BiblioHub?</string>
    <string name="existing_user_message">Already Registered?</string>
    <string name="register"><u>Register</u></string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="update_cart">Update Cart</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="quantity_input">Quantity Input</string>
    <string name="invalidate_search">Invalidate Search</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="log_out">Log out</string>
    <string name="all">All</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_date_example">Eg. 02/12</string>
    <string name="cvv">CVV</string>
    <string name="pin">PIN</string>
    <string name="card_number">Card Number</string>
    <string name="ok">OK</string>
    <string name="payment_complete">Payment Complete!</string>
    <string name="payment_complete_desc">Click OK to proceed to the home page</string>
    <string name="fiction">Fiction</string>
    <string name="non_fiction">Non-fiction</string>
    <string name="y_results">%s result(s)</string>
    <string name="search">Search</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="price_colon">Price (£):</string>
    <string name="available_quantity_colon">Available Quantity:</string>
    <string name="isbn_colon">ISBN:</string>
    <string name="publication_date_colon">Publication Date:</string>
    <string name="category_colon">Category:</string>
    <string name="checkout_title">Pay Now!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="price">Price (£)</string>
    <string name="publication_date">Publication Date</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="checkout">Checkout</string>
    <string name="orders">Orders</string>
    <string name="submit">Submit</string>
    <string name="name_colon">Name:</string>
    <string name="date_colon">Date:</string>
    <string name="total_price_colon">Total Price (£):</string>
    <string name="item_price_colon">Item Price (£):</string>
    <string name="status_colon">Status:</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="unit_price_colon">Unit Price (£):</string>
    <string name="date_published_colon">Date Published:</string>
    <string name="product_form_desc">Add a new book or edit the details of an existing book</string>
</resources>