<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/cart_item"
            android:icon="@drawable/cart"
            android:title="@string/cart"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/admin_home_item"
            android:icon="@drawable/home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/order_item"
            android:icon="@drawable/order"
            android:title="@string/orders"
            app:showAsAction="ifRoom" />
    </group>
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        app:showAsAction="collapseActionView" />
</menu>